Create user info methods from data base
