# routes/userRoutes.js
@@ -2,6 +2,9 @@ const express = require("express");
 const router = express.Router();
 const UserController = require('../controllers/userController');
 
-// router.get('/me', UserController);
+const authMiddleware = require('../middleware/authMiddleware');
+
+router.get('/', authMiddleware, UserController.getUserById);
+router.get('/:id', authMiddleware, UserController.getUserById);
 
 module.exports = router;
